# sinks_proj

./: Cargo.toml  README.md  config.yaml  http-listner_requirements.txt  tcp-listner_requirements.txt
src/: lib.rs  main.rs
src/setting/: mod.rs
src/sink/: http.rs  mod.rs  tcp.rs
src/store/: elastic.rs  kafka.rs  mod.rs  mongo.rs
src/types/: mod.rs
